--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@ MY WEB PAGE
 </head>
 
 <body>
-<H2>HELLO WORD</H2>
-<p>wawa kumpamdo</p>
+<H2><u> WORD</u></H2>
+<br>
+<p><b> wawa kumpamdo</b></p>
+<i>halla</i>
+<s>display</s>
 </body>
 
 
