--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ MY WEB PAGE
 <i>halla</i>
 <s>display</s>
 </body>
-
-
+<p>19 <sub>3</sub></p>
+<p>19 <sup>4</sup></p>
+<p>19 <summary>555</summary></p>
 </html>
